--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Main</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=419763009" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4041493231" id="pagesheet"/>
    </head>
  <body>
 
@@ -25,28 +25,22 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix colelem" id="u105"><!-- group -->
      <div class="clearfix grpelem" id="pa_heroframe"><!-- column -->
       <a class="anchor_item colelem" id="a_heroframe"></a>
-      <div class="clip_frame colelem" id="u231"><!-- svg -->
+      <div class="clip_frame ose_pre_init colelem" id="u231"><!-- svg -->
        <img class="svg" id="u232" src="images/image_1.svg?crc=4247930254" width="1784" height="2149" alt="" data-mu-svgfallback="images/image_1_poster_.png?crc=471370680"/>
       </div>
      </div>
      <a class="nonblock nontext anim_swing clip_frame ose_pre_init grpelem" id="u275" href="index.html#b_largecopy"><!-- svg --><img class="svg" id="u271" src="images/downarrow_1.svg?crc=3891136452" width="65" height="30" alt="" data-mu-svgfallback="images/downarrow_1_poster_.png?crc=4198277398"/></a>
-     <div class="clearfix grpelem" id="pu242-6"><!-- column -->
-      <img class="colelem" id="u242-6" alt="Placeholder Header" width="1177" height="361" src="images/u242-6.png?crc=3890335178"/><!-- rasterized frame -->
+     <div class="clearfix grpelem" id="pu254"><!-- column -->
       <div class="clip_frame colelem" id="u254"><!-- svg -->
        <img class="svg" id="u250" src="images/div_1.svg?crc=21141844" width="93" height="2" alt="" data-mu-svgfallback="images/div_1_poster_.png?crc=3886070446"/>
       </div>
-      <img class="colelem" id="u261-4" alt="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut " width="1313" height="300" src="images/u261-4.png?crc=503783485"/><!-- rasterized frame -->
-      <div class="clearfix colelem" id="u268-4"><!-- content -->
+      <div class="clearfix ose_pre_init colelem" id="u268-4"><!-- content -->
        <p>Photo: Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</p>
       </div>
-     </div>
-     <div class="clip_frame grpelem" id="u286"><!-- svg -->
-      <img class="svg" id="u282" src="images/home_1.svg?crc=3848613069" width="123" height="123" alt="" data-mu-svgfallback="images/home_1_poster_.png?crc=3883872514"/>
      </div>
     </div>
     <div class="clearfix colelem" id="pu113"><!-- group -->
      <div class="clearfix grpelem" id="u113"><!-- group -->
-      <img class="ose_pre_init grpelem" id="u293-4" alt="Lorem ipsum dolor sit amet, consect etuer adipiscing elit, sed diam nonummy nibh sed euinci”" width="594" height="588" src="images/u293-4.png?crc=3766497954"/><!-- rasterized frame -->
       <div class="clip_frame grpelem" id="u313"><!-- svg -->
        <img class="svg" id="u309" src="images/div_2.svg?crc=3807890748" width="2" height="1658" alt="" data-mu-svgfallback="images/div_2_poster_.png?crc=108189714"/>
       </div>
@@ -71,11 +65,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem" id="u127"><!-- group -->
      <a class="anchor_item grpelem" id="d_spotlight"></a>
-     <div class="clearfix grpelem" id="pu392"><!-- group -->
-      <div class="clip_frame ose_pre_init grpelem" id="u392"><!-- svg -->
+     <div class="clearfix grpelem" id="pu392"><!-- column -->
+      <div class="clip_frame ose_pre_init colelem" id="u392"><!-- svg -->
        <img class="svg" id="u388" src="images/image_3.svg?crc=53053" width="2594" height="1920" alt="" data-mu-svgfallback="images/image_3_poster_.png?crc=242066769"/>
       </div>
-      <a class="nonblock nontext anim_swing clip_frame ose_pre_init grpelem" id="u1000" href="index.html#e_statsdates"><!-- svg --><img class="svg" id="u1001" src="images/downarrow_1.svg?crc=3891136452" width="69" height="32" alt="" data-mu-svgfallback="images/downarrow_1_poster_.png?crc=4198277398"/></a>
+      <a class="nonblock nontext anim_swing clip_frame ose_pre_init colelem" id="u1000" href="index.html#e_statsdates"><!-- svg --><img class="svg" id="u1001" src="images/downarrow_1.svg?crc=3891136452" width="69" height="32" alt="" data-mu-svgfallback="images/downarrow_1_poster_.png?crc=4198277398"/></a>
      </div>
     </div>
     <div class="clearfix colelem" id="u133"><!-- group -->
@@ -114,16 +108,23 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <img class="mse_pre_init ose_pre_init" id="u376-7" alt="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim erit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim quiusto odio dignissim quiusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait " width="980" height="460" src="images/u376-7.png?crc=3797058143"/><!-- rasterized frame -->
     <img class="mse_pre_init ose_pre_init" id="u385-4" alt="Photo: Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam" width="919" height="139" src="images/u385-4.png?crc=4129508917"/><!-- rasterized frame -->
     <img class="mse_pre_init ose_pre_init" id="u329-4" alt="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequ lobortis nis at." width="942" height="517" src="images/u329-4.png?crc=160067059"/><!-- rasterized frame -->
+    <img class="mse_pre_init ose_pre_init" id="u293-4" alt="Lorem ipsum dolor sit amet, consect etuer adipiscing elit, sed diam nonummy nibh sed euinci”" width="594" height="588" src="images/u293-4.png?crc=3766497954"/><!-- rasterized frame -->
     <img class="mse_pre_init ose_pre_init" id="u299-4" alt="AUTHOR OR NEWSPAPER" width="330" height="96" src="images/u299-4.png?crc=432610930"/><!-- rasterized frame -->
     <img class="mse_pre_init ose_pre_init" id="u305-4" alt="DATE" width="330" height="49" src="images/u305-4.png?crc=189263453"/><!-- rasterized frame -->
     <img class="mse_pre_init ose_pre_init" id="u320-4" alt="Placeholder Header" width="838" height="76" src="images/u320-4.png?crc=4039893976"/><!-- rasterized frame -->
     <img class="mse_pre_init ose_pre_init" id="u379-4" alt="Placeholder Header" width="654" height="76" src="images/u379-4.png?crc=424485984"/><!-- rasterized frame -->
     <div class="rgba-background ose_pre_init mse_pre_init" id="u399"><!-- simple frame --></div>
     <div class="rgba-background ose_pre_init mse_pre_init" id="u402"><!-- simple frame --></div>
+    <img class="mse_pre_init ose_pre_init" id="u242-6" alt="Placeholder Header" width="1177" height="361" src="images/u242-6.png?crc=3890335178"/><!-- rasterized frame -->
+    <img class="mse_pre_init ose_pre_init" id="u261-4" alt="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut " width="1313" height="300" src="images/u261-4.png?crc=503783485"/><!-- rasterized frame -->
     <img class="mse_pre_init ose_pre_init" id="u338-7" alt="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis Nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriu" width="568" height="598" src="images/u338-7.png?crc=140444204"/><!-- rasterized frame -->
     <img class="mse_pre_init ose_pre_init" id="u335-4" alt="Placeholder Header" width="400" height="140" src="images/u335-4.png?crc=120364980"/><!-- rasterized frame -->
+    <div class="clip_frame" id="u1128"><!-- svg -->
+     <img class="svg" id="u1129" src="images/home_1.svg?crc=3848613069" width="123" height="123" alt="" data-mu-svgfallback="images/home_1_poster_.png?crc=3883872514"/>
+    </div>
+    <div id="u1159"><!-- simple frame --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="10700" data-content-above-spacer="10700" data-content-below-spacer="0"></div>
+   <div class="verticalspacer" data-offset-top="10805" data-content-above-spacer="10804" data-content-below-spacer="0"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -142,15 +143,16 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
+$('#u231').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,0],"fade":50},{"in":[0,0],"opacity":100},{"opacity":0,"in":[0,Infinity],"fade":2310.15}]);/* scroll effect */
 $('#u275').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,0],"fade":50},{"in":[0,0],"opacity":100},{"opacity":0,"in":[0,Infinity],"fade":50}]);/* scroll effect */
-$('#u293-4').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,2159.95],"fade":268.05},{"in":[2159.95,2159.95],"opacity":100},{"opacity":0,"in":[2159.95,Infinity],"fade":1865.2}]);/* scroll effect */
-$('#u795').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,4040],"fade":50},{"in":[4040,4040],"opacity":100},{"opacity":0,"in":[4040,Infinity],"fade":283.4}]);/* scroll effect */
+$('#u268-4').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,0],"fade":1355.9},{"in":[0,0],"opacity":100},{"opacity":0,"in":[0,Infinity],"fade":1527.05}]);/* scroll effect */
+$('#u795').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,2159.95],"fade":49.95},{"in":[2159.95,2159.95],"opacity":100},{"opacity":0,"in":[2159.95,Infinity],"fade":50.05}]);/* scroll effect */
 $('#u332-4').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,2159.95],"fade":407},{"in":[2159.95,2159.95],"opacity":100},{"opacity":0,"in":[2159.95,Infinity],"fade":1761}]);/* scroll effect */
 $('#u363').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,4320],"fade":179.95},{"in":[4320,4320],"opacity":100},{"opacity":0,"in":[4320,Infinity],"fade":2164.55}]);/* scroll effect */
-$('#u987').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,6190],"fade":50},{"in":[6190,6190],"opacity":100},{"opacity":0,"in":[6190,Infinity],"fade":283.4}]);/* scroll effect */
+$('#u987').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,4320],"fade":50},{"in":[4320,4320],"opacity":100},{"opacity":0,"in":[4320,Infinity],"fade":50}]);/* scroll effect */
 $('#u392').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,6485],"fade":229.25},{"in":[6485,6485],"opacity":100},{"opacity":0,"in":[6485,Infinity],"fade":2054.2}]);/* scroll effect */
-$('#u1000').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,8250],"fade":50},{"in":[8250,8250],"opacity":100},{"opacity":0,"in":[8250,Infinity],"fade":283.4}]);/* scroll effect */
-$('#u1009').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,10399],"fade":50},{"in":[10399,10399],"opacity":100},{"opacity":0,"in":[10399,Infinity],"fade":283.4}]);/* scroll effect */
+$('#u1000').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,6485],"fade":50},{"in":[6485,6485],"opacity":100},{"opacity":0,"in":[6485,Infinity],"fade":50}]);/* scroll effect */
+$('#u1009').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,8645],"fade":50},{"in":[8645,8645],"opacity":100},{"opacity":0,"in":[8645,Infinity],"fade":50}]);/* scroll effect */
 $('#u323-7').registerPositionScrollEffect([{"in":[-Infinity,2160],"speed":[1,0]},{"in":[2160,Infinity],"speed":[0,0]}]);/* scroll effect */
 $('#u323-7').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,2160],"fade":180},{"in":[2160,2160],"opacity":100},{"opacity":0,"in":[2160,Infinity],"fade":1865.2}]);/* scroll effect */
 $('#u376-7').registerPositionScrollEffect([{"in":[-Infinity,6485],"speed":[1,0]},{"in":[6485,Infinity],"speed":[0,0]}]);/* scroll effect */
@@ -159,6 +161,8 @@ $('#u385-4').registerPositionScrollEffect([{"in":[-Infinity,6485],"speed":[1,0]}
 $('#u385-4').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,6485],"fade":50},{"in":[6485,6485],"opacity":100},{"opacity":0,"in":[6485,Infinity],"fade":1920.1}]);/* scroll effect */
 $('#u329-4').registerPositionScrollEffect([{"in":[-Infinity,2160],"speed":[1,0]},{"in":[2160,Infinity],"speed":[0,0]}]);/* scroll effect */
 $('#u329-4').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,2160],"fade":180},{"in":[2160,2160],"opacity":100},{"opacity":0,"in":[2160,Infinity],"fade":1865.2}]);/* scroll effect */
+$('#u293-4').registerPositionScrollEffect([{"in":[-Infinity,2159.95],"speed":[1,0]},{"in":[2159.95,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u293-4').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,2159.95],"fade":268.05},{"in":[2159.95,2159.95],"opacity":100},{"opacity":0,"in":[2159.95,Infinity],"fade":1865.2}]);/* scroll effect */
 $('#u299-4').registerPositionScrollEffect([{"in":[-Infinity,2159.95],"speed":[1,0]},{"in":[2159.95,Infinity],"speed":[0,0]}]);/* scroll effect */
 $('#u299-4').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,2159.95],"fade":173.05},{"in":[2159.95,2159.95],"opacity":100},{"opacity":0,"in":[2159.95,Infinity],"fade":2163.4}]);/* scroll effect */
 $('#u305-4').registerPositionScrollEffect([{"in":[-Infinity,2160],"speed":[1,0]},{"in":[2160,Infinity],"speed":[0,0]}]);/* scroll effect */
@@ -171,6 +175,10 @@ $('#u399').registerPositionScrollEffect([{"in":[-Infinity,6485],"speed":[-1,0]},
 $('#u399').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,6485],"fade":264.58},{"in":[6485,6485],"opacity":100},{"opacity":0,"in":[6485,Infinity],"fade":1633.37}]);/* scroll effect */
 $('#u402').registerPositionScrollEffect([{"in":[-Infinity,6485],"speed":[1,0]},{"in":[6485,Infinity],"speed":[0,0]}]);/* scroll effect */
 $('#u402').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,6485],"fade":50},{"in":[6485,6485],"opacity":100},{"opacity":0,"in":[6485,Infinity],"fade":1686}]);/* scroll effect */
+$('#u242-6').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[1,0]},{"in":[0,Infinity],"speed":[-1,0.6]}]);/* scroll effect */
+$('#u242-6').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,0],"fade":521},{"in":[0,0],"opacity":100},{"opacity":0,"in":[0,Infinity],"fade":1079.95}]);/* scroll effect */
+$('#u261-4').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[1,0]},{"in":[0,Infinity],"speed":[1,0]}]);/* scroll effect */
+$('#u261-4').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,0],"fade":50},{"in":[0,0],"opacity":100},{"opacity":0,"in":[0,Infinity],"fade":1424.05}]);/* scroll effect */
 $('#u338-7').registerPositionScrollEffect([{"in":[-Infinity,4320.05],"speed":[1,0]},{"in":[4320.05,Infinity],"speed":[0,0]}]);/* scroll effect */
 $('#u338-7').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,4320.05],"fade":288.05},{"in":[4320.05,4320.05],"opacity":100},{"opacity":0,"in":[4320.05,Infinity],"fade":1897.1}]);/* scroll effect */
 $('#u335-4').registerPositionScrollEffect([{"in":[-Infinity,4320.05],"speed":[1,0]},{"in":[4320.05,Infinity],"speed":[0,0]}]);/* scroll effect */
