--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Main</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=220730291" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=461375517" id="pagesheet"/>
    </head>
  <body>
 
@@ -49,28 +49,32 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <img id="u332-4_img" alt="1872" width="1453" height="720" src="images/u332-4.png?crc=4215751473"/>
       </div>
      </div>
-     <a class="anchor_item grpelem" id="b_largecopy"></a>
-    </div>
-    <div class="clearfix colelem" id="u121"><!-- group -->
-     <a class="anchor_item grpelem" id="c_imagecaptions"></a>
+     <div class="clearfix grpelem" id="u127"><!-- column -->
+      <div class="position_content" id="u127_position_content">
+       <div class="clip_frame ose_pre_init colelem" id="u392"><!-- svg -->
+        <img class="svg" id="u388" src="images/image_3.svg?crc=53053" width="2594" height="1920" alt="" data-mu-svgfallback="images/image_3_poster_.png?crc=242066769"/>
+       </div>
+       <a class="nonblock nontext anim_swing clip_frame ose_pre_init colelem" id="u1000" href="index.html#e_statsdates"><!-- svg --><img class="svg" id="u1001" src="images/downarrow_1.svg?crc=3891136452" width="69" height="32" alt="" data-mu-svgfallback="images/downarrow_1_poster_.png?crc=4198277398"/></a>
+      </div>
+     </div>
+     <div class="clearfix grpelem" id="u121"><!-- group -->
+      <a class="anchor_item grpelem" id="c_imagecaptions"></a>
+      <a class="nonblock nontext anim_swing clip_frame ose_pre_init grpelem" id="u987" href="index.html#d_spotlight"><!-- svg --><img class="svg" id="u988" src="images/downarrow_1.svg?crc=3891136452" width="69" height="32" alt="" data-mu-svgfallback="images/downarrow_1_poster_.png?crc=4198277398"/></a>
+     </div>
+     <div class="clip_frame grpelem" id="u1329"><!-- image -->
+      <img class="block" id="u1329_img" src="images/gradient1.png?crc=153337191" alt="" width="2048" height="2048"/>
+     </div>
+     <div class="clip_frame ose_pre_init grpelem" id="u363"><!-- svg -->
+      <img class="svg" id="u359" src="images/image_2.svg?crc=4043267470" width="3075" height="1804" alt="" data-mu-svgfallback="images/image_2_poster_.png?crc=301885575"/>
+     </div>
+     <div class="clip_frame grpelem" id="u1339"><!-- image -->
+      <img class="block" id="u1339_img" src="images/gradient1.png?crc=153337191" alt="" width="2048" height="2048"/>
+     </div>
      <div class="clip_frame grpelem" id="u350"><!-- svg -->
       <img class="svg" id="u351" src="images/div_2.svg?crc=3807890748" width="2" height="1669" alt="" data-mu-svgfallback="images/div_2_poster_.png?crc=108189714"/>
      </div>
-     <div class="clearfix grpelem" id="pu363"><!-- column -->
-      <div class="clip_frame ose_pre_init colelem" id="u363"><!-- svg -->
-       <img class="svg" id="u359" src="images/image_2.svg?crc=4043267470" width="3075" height="1804" alt="" data-mu-svgfallback="images/image_2_poster_.png?crc=301885575"/>
-      </div>
-      <a class="nonblock nontext anim_swing clip_frame ose_pre_init colelem" id="u987" href="index.html#d_spotlight"><!-- svg --><img class="svg" id="u988" src="images/downarrow_1.svg?crc=3891136452" width="69" height="32" alt="" data-mu-svgfallback="images/downarrow_1_poster_.png?crc=4198277398"/></a>
-     </div>
-    </div>
-    <div class="clearfix colelem" id="u127"><!-- group -->
      <a class="anchor_item grpelem" id="d_spotlight"></a>
-     <div class="clearfix grpelem" id="pu392"><!-- column -->
-      <div class="clip_frame ose_pre_init colelem" id="u392"><!-- svg -->
-       <img class="svg" id="u388" src="images/image_3.svg?crc=53053" width="2594" height="1920" alt="" data-mu-svgfallback="images/image_3_poster_.png?crc=242066769"/>
-      </div>
-      <a class="nonblock nontext anim_swing clip_frame ose_pre_init colelem" id="u1000" href="index.html#e_statsdates"><!-- svg --><img class="svg" id="u1001" src="images/downarrow_1.svg?crc=3891136452" width="69" height="32" alt="" data-mu-svgfallback="images/downarrow_1_poster_.png?crc=4198277398"/></a>
-     </div>
+     <a class="anchor_item grpelem" id="b_largecopy"></a>
     </div>
     <div class="clearfix colelem" id="u133"><!-- group -->
      <a class="anchor_item grpelem" id="e_statsdates"></a>
@@ -147,10 +151,10 @@ $('#u275').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,0],"fade"
 $('#u268-4').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,0],"fade":1355.9},{"in":[0,0],"opacity":100},{"opacity":0,"in":[0,Infinity],"fade":1527.05}]);/* scroll effect */
 $('#u795').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,2159.95],"fade":49.95},{"in":[2159.95,2159.95],"opacity":100},{"opacity":0,"in":[2159.95,Infinity],"fade":50.05}]);/* scroll effect */
 $('#u332-4').registerOpacityScrollEffect([{"opacity":100,"in":[-Infinity,2159.95],"fade":407},{"in":[2159.95,2159.95],"opacity":100},{"opacity":0,"in":[2159.95,Infinity],"fade":1761}]);/* scroll effect */
-$('#u363').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,4320],"fade":179.95},{"in":[4320,4320],"opacity":100},{"opacity":0,"in":[4320,Infinity],"fade":2164.55}]);/* scroll effect */
-$('#u987').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,4320],"fade":50},{"in":[4320,4320],"opacity":100},{"opacity":0,"in":[4320,Infinity],"fade":50}]);/* scroll effect */
 $('#u392').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,6485],"fade":229.25},{"in":[6485,6485],"opacity":100},{"opacity":0,"in":[6485,Infinity],"fade":2054.2}]);/* scroll effect */
 $('#u1000').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,6485],"fade":50},{"in":[6485,6485],"opacity":100},{"opacity":0,"in":[6485,Infinity],"fade":50}]);/* scroll effect */
+$('#u987').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,4320],"fade":50},{"in":[4320,4320],"opacity":100},{"opacity":0,"in":[4320,Infinity],"fade":50}]);/* scroll effect */
+$('#u363').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,4320],"fade":179.95},{"in":[4320,4320],"opacity":100},{"opacity":0,"in":[4320,Infinity],"fade":2164.55}]);/* scroll effect */
 $('#u1009').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,8645],"fade":50},{"in":[8645,8645],"opacity":100},{"opacity":0,"in":[8645,Infinity],"fade":50}]);/* scroll effect */
 $('#u323-7').registerPositionScrollEffect([{"in":[-Infinity,2160],"speed":[1,0]},{"in":[2160,Infinity],"speed":[0,0]}]);/* scroll effect */
 $('#u323-7').registerOpacityScrollEffect([{"opacity":0,"in":[-Infinity,2160],"fade":180},{"in":[2160,2160],"opacity":100},{"opacity":0,"in":[2160,Infinity],"fade":1865.2}]);/* scroll effect */
