--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>PastSlide1</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4132174878" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3909880950" id="pagesheet"/>
     <!--/*
 
 */
@@ -25,27 +25,31 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
+   <div class="clearfix grpelem" id="pu1096-4"><!-- column -->
+    <div class="clearfix colelem" id="u1096-4"><!-- content -->
+     <p>EXPLORE</p>
+    </div>
+    <div class="clearfix colelem" id="u1095-4"><!-- content -->
+     <p>The Making of a Giant</p>
+    </div>
+    <a class="nonblock nontext rounded-corners clearfix colelem" id="u1124-4" href="chapter-1.html"><!-- content --><p id="u1124-2">READ MORE</p></a>
+    <div class="clearfix colelem" id="pu1127"><!-- group -->
+     <a class="nonblock nontext MuseLinkActive rounded-corners grpelem" id="u1127" href="index.html"><!-- simple frame --></a>
+     <a class="nonblock nontext rounded-corners grpelem" id="u1139" href="pastslide2.html"><!-- simple frame --></a>
+     <a class="nonblock nontext rounded-corners grpelem" id="u1145" href="pastslide3.html"><!-- simple frame --></a>
+    </div>
+   </div>
+   <div class="verticalspacer" data-offset-top="1996" data-content-above-spacer="1992" data-content-below-spacer="0"></div>
    <div class="clearfix grpelem" id="pu1068"><!-- group -->
     <div class="clip_frame grpelem" id="u1068"><!-- image -->
      <img class="block" id="u1068_img" src="images/c1chapbkg.png?crc=4188384897" alt="" width="3840" height="2160"/>
     </div>
-    <div class="clearfix grpelem" id="u1095-4"><!-- content -->
-     <p>The Making of a Giant</p>
+    <div class="clip_frame grpelem" id="u1105"><!-- svg -->
+     <img class="svg" id="u1101" src="images/ornament1.svg?crc=4006536597" width="126" height="110" alt="" data-mu-svgfallback="images/ornament1_poster_.png?crc=3913124280"/>
     </div>
-    <div class="clearfix grpelem" id="u1096-4"><!-- content -->
-     <p>EXPLORE</p>
-    </div>
-    <a class="nonblock nontext rounded-corners clearfix grpelem" id="u1124-4" href="chapter-1.html"><!-- content --><p id="u1124-2">READ MORE</p></a>
-    <a class="nonblock nontext MuseLinkActive rounded-corners grpelem" id="u1127" href="index.html"><!-- simple frame --></a>
-    <a class="nonblock nontext rounded-corners grpelem" id="u1139" href="pastslide2.html"><!-- simple frame --></a>
-    <a class="nonblock nontext rounded-corners grpelem" id="u1145" href="pastslide3.html"><!-- simple frame --></a>
+    <a class="nonblock nontext clip_frame grpelem" id="u1809" href="pastslide3.html"><!-- svg --><img class="svg" id="u1805" src="images/leftarrow.svg?crc=145963184" width="11" height="20" alt="" data-mu-svgfallback="images/leftarrow_poster_.png?crc=3942211015"/></a>
+    <a class="nonblock nontext clip_frame grpelem" id="u1815" href="pastslide2.html"><!-- svg --><img class="svg" id="u1811" src="images/rightarrow.svg?crc=3877983299" width="11" height="20" alt="" data-mu-svgfallback="images/rightarrow_poster_.png?crc=4138139937"/></a>
    </div>
-   <div class="verticalspacer" data-offset-top="2160" data-content-above-spacer="2160" data-content-below-spacer="0"></div>
-   <a class="nonblock nontext clip_frame grpelem" id="u1809" href="pastslide3.html"><!-- svg --><img class="svg" id="u1805" src="images/leftarrow.svg?crc=145963184" width="11" height="20" alt="" data-mu-svgfallback="images/leftarrow_poster_.png?crc=3942211015"/></a>
-   <div class="clip_frame grpelem" id="u1105"><!-- svg -->
-    <img class="svg" id="u1101" src="images/ornament1.svg?crc=4006536597" width="126" height="110" alt="" data-mu-svgfallback="images/ornament1_poster_.png?crc=3913124280"/>
-   </div>
-   <a class="nonblock nontext clip_frame grpelem" id="u1815" href="pastslide2.html"><!-- svg --><img class="svg" id="u1811" src="images/rightarrow.svg?crc=3877983299" width="11" height="20" alt="" data-mu-svgfallback="images/rightarrow_poster_.png?crc=4138139937"/></a>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
