--- a/pastslide2.html
+++ b/pastslide2.html
@@ -16,7 +16,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>PastSlide2</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/pastslide2.css?crc=128451981" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/pastslide2.css?crc=391933247" id="pagesheet"/>
     <!--/*
 
 */
@@ -25,28 +25,32 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
+   <div class="clearfix grpelem" id="pu1162-4"><!-- column -->
+    <div class="clearfix colelem" id="u1162-4"><!-- content -->
+     <p>EXPLORE</p>
+    </div>
+    <div class="clearfix colelem" id="u1160-6"><!-- content -->
+     <p>Leading with</p>
+     <p>Consumer Insights</p>
+    </div>
+    <a class="nonblock nontext rounded-corners clearfix colelem" id="u1161-4" href="chapter-2.html"><!-- content --><p id="u1161-2">READ MORE</p></a>
+    <div class="clearfix colelem" id="pu1163"><!-- group -->
+     <a class="nonblock nontext rounded-corners grpelem" id="u1163" href="index.html"><!-- simple frame --></a>
+     <a class="nonblock nontext MuseLinkActive rounded-corners grpelem" id="u1157" href="pastslide2.html"><!-- simple frame --></a>
+     <a class="nonblock nontext rounded-corners grpelem" id="u1156" href="pastslide3.html"><!-- simple frame --></a>
+    </div>
+   </div>
+   <div class="verticalspacer" data-offset-top="1996" data-content-above-spacer="1992" data-content-below-spacer="0"></div>
    <div class="clearfix grpelem" id="pu1268"><!-- group -->
     <div class="clip_frame grpelem" id="u1268"><!-- image -->
      <img class="block" id="u1268_img" src="images/c2chapbkg.png?crc=83893212" alt="" width="3840" height="2160"/>
     </div>
-    <div class="clearfix grpelem" id="u1160-6"><!-- content -->
-     <p>Leading with</p>
-     <p>Consumer Insights</p>
+    <div class="clip_frame grpelem" id="u1154"><!-- svg -->
+     <img class="svg" id="u1155" src="images/ornament1.svg?crc=4006536597" width="126" height="110" alt="" data-mu-svgfallback="images/ornament1_poster_.png?crc=3913124280"/>
     </div>
-    <div class="clearfix grpelem" id="u1162-4"><!-- content -->
-     <p>EXPLORE</p>
-    </div>
-    <a class="nonblock nontext rounded-corners clearfix grpelem" id="u1161-4" href="chapter-2.html"><!-- content --><p id="u1161-2">READ MORE</p></a>
-    <a class="nonblock nontext rounded-corners grpelem" id="u1163" href="index.html"><!-- simple frame --></a>
-    <a class="nonblock nontext MuseLinkActive rounded-corners grpelem" id="u1157" href="pastslide2.html"><!-- simple frame --></a>
-    <a class="nonblock nontext rounded-corners grpelem" id="u1156" href="pastslide3.html"><!-- simple frame --></a>
+    <a class="nonblock nontext MuseLinkActive clip_frame grpelem" id="u1836" href="pastslide2.html"><!-- svg --><img class="svg" id="u1837" src="images/leftarrow.svg?crc=145963184" width="11" height="20" alt="" data-mu-svgfallback="images/leftarrow_poster_.png?crc=3942211015"/></a>
+    <a class="nonblock nontext clip_frame grpelem" id="u1834" href="pastslide3.html"><!-- svg --><img class="svg" id="u1835" src="images/rightarrow.svg?crc=3877983299" width="11" height="20" alt="" data-mu-svgfallback="images/rightarrow_poster_.png?crc=4138139937"/></a>
    </div>
-   <div class="verticalspacer" data-offset-top="2160" data-content-above-spacer="2160" data-content-below-spacer="0"></div>
-   <a class="nonblock nontext MuseLinkActive clip_frame grpelem" id="u1836" href="pastslide2.html"><!-- svg --><img class="svg" id="u1837" src="images/leftarrow.svg?crc=145963184" width="11" height="20" alt="" data-mu-svgfallback="images/leftarrow_poster_.png?crc=3942211015"/></a>
-   <div class="clip_frame grpelem" id="u1154"><!-- svg -->
-    <img class="svg" id="u1155" src="images/ornament1.svg?crc=4006536597" width="126" height="110" alt="" data-mu-svgfallback="images/ornament1_poster_.png?crc=3913124280"/>
-   </div>
-   <a class="nonblock nontext clip_frame grpelem" id="u1834" href="pastslide3.html"><!-- svg --><img class="svg" id="u1835" src="images/rightarrow.svg?crc=3877983299" width="11" height="20" alt="" data-mu-svgfallback="images/rightarrow_poster_.png?crc=4138139937"/></a>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
